<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2016 Adam Feinstein
<p/>
This file is part of Mini Scoreboard.
<p/>
Mini Scoreboard is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.
<p/>
Mini Scoreboard is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.
<p/>
You should have received a copy of the GNU General Public License
along with Mini Scoreboard.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">Mini Scoreboard</string>

    <!-- AuthUiActivity -->
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="sign_out_failed">Sign Out Failed</string>

    <!-- MainActivity -->
    <string name="stats_fragment_title">Statistics</string>
    <string name="history_fragment_title">History</string>
    <string name="daily_fragment_title">Daily</string>

    <!-- menu.xml -->
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_about">About</string>
    <string name="menu_title_change_user">View Someone Else\'s Stats</string>

    <!-- AboutDialogFragment -->
    <string name="about_message">
        Mini Scoreboard is an &lt;a href="https://github.com/AEFeinstein/MiniScoreboard"&gt;open source project&lt;/a&gt; on GitHub.&lt;br&gt;
        &lt;br&gt;
        Mini Scoreboard is powered by &lt;a href="https://firebase.google.com/"&gt;Firebase&lt;/a&gt;.&lt;br&gt;
        &lt;br&gt;
        Program licenced under the &lt;a href="http://www.gnu.org/licenses/gpl.html"&gt;GNU General Public License v3+&lt;/a&gt;.&lt;br&gt;
        &lt;br&gt;
		Media licenced under the &lt;a href="http://creativecommons.org/licenses/by-sa/3.0/"&gt;Creative Commons Attribution-ShareAlike 3.0 Unported License&lt;a&gt;.&lt;br&gt;
        &lt;br&gt;
        &lt;a href="https://github.com/derekbrameyer/android-betterpickers"&gt;BetterPickers&lt;/a&gt; used under the Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
        &lt;br&gt;
        &lt;a href="https://github.com/diogobernardino/WilliamChart"&gt;WilliamChart&lt;/a&gt; used under the Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
        &lt;br&gt;
        &lt;a href="https://github.com/bignerdranch/expandable-recycler-view"&gt;Expandable RecyclerView&lt;/a&gt; used under the MIT License&lt;/a&gt;.&lt;br&gt;
        &lt;br&gt;
        &lt;a href="https://github.com/wasabeef/recyclerview-animators"&gt;RecyclerView Animators&lt;/a&gt; used under the Apache License, Version 2.0&lt;/a&gt;.&lt;br&gt;
    </string>
    <string name="thanks">Thanks</string>

    <!-- DailyFragment -->
    <string name="play_puzzle">Play Today\'s Crossword</string>
    <string name="mini_crossword_url">http://www.nytimes.com/crosswords/game/mini</string>

    <!-- ScoreInputDialogFragment -->
    <string name="five_by_five">5x5 Puzzle</string>
    <string name="seven_by_seven">7x7 Puzzle</string>
    <string name="score_input_title">Submit Your Score</string>
    <string name="button_ok_text">OK</string>
    <string name="button_cancel_text">Cancel</string>

    <!-- StatsFragment -->
    <string name="mean_label">Average Time: %s</string>
    <string name="stddev_label">Standard Deviation: %s</string>
    <string name="wins_label">Wins: %d</string>

    <!-- MiniScoreboardAlarm -->
    <string name="notification_title">Daily Puzzle</string>
    <string name="notification_summary">Play the daily Mini Crossword online</string>
    <string name="action_play_crossword">Play Crossword</string>
    <string name="action_submit_score">Submit Score</string>

    <!-- UserNameInputDialogFragment -->
    <string name="username_input_title">Pick a Username</string>
    <string name="user_created">User Created!</string>
    <string name="username_changed">Username Changed</string>

    <!-- DeleteAccountDialogFragment -->
    <string name="delete_account_dialog_message">Are you sure you want to delete this account? All your data will be gone forever.</string>
    <string name="delete_account_dialog_negative">No</string>
    <string name="delete_account_dialog_positive">Yes, nuke it!</string>
    <string name="delete_account_failed">Delete Account Failed</string>

    <!-- Settings Strings -->
    <string name="pref_account_group_title">Account Settings</string>

    <string name="pref_key_daily_notification">daily_notification</string>
    <string name="pref_daily_notification_title">Daily Notification</string>
    <string name="pref_daily_notification_summary">Get a daily notification at noon to play today\'s puzzle</string>

    <string name="pref_key_daily_notification_sound">notification_sound</string>
    <string name="pref_daily_notification_sound_summary">A sound accompanies the notification</string>
    <string name="pref_daily_notification_sound_title">Sound</string>

    <string name="pref_key_daily_notification_vibrate">notification_vibrate</string>
    <string name="pref_daily_notification_vibrate_summary">A vibration accompanies the notification</string>
    <string name="pref_daily_notification_vibrate_title">Vibration</string>

    <string name="pref_notification_group_title">Notification Settings</string>

    <string name="pref_key_pref_change_username_btn">change_username</string>
    <string name="pref_change_username_title">Change Your Username</string>

    <string name="pref_key_sign_out_btn">sign_out</string>
    <string name="pref_sign_out_title">Sign Out</string>

    <string name="pref_key_pref_delete_acct_btn">delete_acct</string>
    <string name="pref_delete_acct_title">Delete Your Account</string>

    <string name="pref_key_last_submission">last_submission</string>

</resources>
