<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2016 Adam Feinstein
<p/>
This file is part of Mini Scoreboard.
<p/>
Mini Scoreboard is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.
<p/>
Mini Scoreboard is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.
<p/>
You should have received a copy of the GNU General Public License
along with Mini Scoreboard.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/pref_key_daily_notification"
        android:summary="@string/pref_daily_notification_summary"
        android:title="@string/pref_daily_notification_title" />
    <Preference
        android:key="@string/pref_key_sign_out_btn"
        android:title="@string/pref_sign_out_title" />
    <Preference
        android:key="@string/pref_key_pref_delete_acct_btn"
        android:title="@string/pref_delete_acct_title" />
</PreferenceScreen>